Replaced logo, fixed page being hidden by header, replaced join us link on page

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -11,7 +11,7 @@ body {
 .carousel-caption {
     position: relative;
     top: 12rem;
-    width: 75%;
+    width: 80%;
     z-index: 10;
 }
 
@@ -79,7 +79,7 @@ body {
 }
 
 .card a {
-    bottom: 1em
+    bottom: 1rem
 }
 
 .card img {
@@ -96,7 +96,25 @@ main div.container {
     height: 200px
 }
 
+.navbar-brand img {
+  height: 8rem;
+}
+
+.navbar-nav > li > a
+{
+    display: inline-block;
+    padding: 0;
+    position: relative;
+    margin: 0;
+    vertical-align: bottom !important;
+}
+
 .bg-white {
   background-color: #ffffff !important;
   border-bottom: 1px solid lightgrey;
+}
+
+.secondary-page-content {
+  position: relative;
+  top: 12rem;
 }
